--- a/fields/week1.tex
+++ b/fields/week1.tex
@@ -5,9 +5,10 @@
 \begin{definition}
   Let $R$ be a commutative ring with $1$, and $I$ be an ideal of $R$, then
   \begin{itemize}
-    \item $I$ is called a maximal ideal if for any ideal $J$ satisfied
+    \item $I$ is called a \emph{maximal ideal}\index{Ideal!maximal ideal} if for any ideal $J$ satisfied
       $I \subseteq J$ then $J = I \text{ or } J = R$.
-    \item $I$ is called a prime ideal if $I \neq R$ and $ab \in I \implies a \in I \text{ or } b \in I$.
+    \item $I$ is called a \emph{prime ideal}\index{Ideal!prime ideal}
+      if $I \neq R$ and $ab \in I \implies a \in I \text{ or } b \in I$.
   \end{itemize}
 \end{definition}
 
@@ -74,7 +75,7 @@
   \[ f(x) = \lambda (x - \alpha_1) (x - \alpha_2) \cdots (x - \alpha_n) \text{ with }
     \alpha_1, \alpha_2, \cdots, \alpha_n \in L,\, \lambda \in K \]
   In fact, $L$ can be chosen to be the smallest field over which $f$ splits and in this case $[L : K] \leq n!$.\\
-  $L$ is called a splitting field for $f$ over $K$.
+  $L$ is called a \emph{splitting field} \index{splitting field} for $f$ over $K$.
 \end{theorem}
 
 \begin{proof}
