--- a/main.tex
+++ b/main.tex
@@ -310,6 +310,8 @@
 \include{linear_repr/week15}
 \include{extensions/week16}
 \include{fields/week1}
+\include{fields/week2}
+\include{fields/week3}
 
 \printindex
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
