Add some hao dong xi

--- a/fields/week1.tex
+++ b/fields/week1.tex
@@ -154,7 +154,7 @@
   If $\bar\tau(m_{\alpha, K})$ has $r$ distinc roots in $L$, then there are exactly $r$ extensions of $\tau$.
 \end{coro}
 
-\begin{theorem}
+\begin{theorem} \label{thm:two-splitting-field-are-isom}
   Let $\tau: K \to K'$ be an isomorphism of fields.
   If L is a splitting field for $f$ over $K$ and $L'$ is a splitting field for $\bar\tau(f)$
   over $K'$, then $L \cong L'$
