--- a/group/week4.tex
+++ b/group/week4.tex
@@ -274,7 +274,7 @@ Inverse limit:
   \end{proof}
 \end{theorem}
 
-\begin{theorem}
+\begin{theorem} \label{thm:finite-subgroup-of-field-is-cyclic}
   Let $F$ be a field. Then any finite subgroup $G$ of $(F^\times, \cdot, 1)$
   is cyclic.
 
