--- a/main.tex
+++ b/main.tex
@@ -234,6 +234,13 @@
 \newcommand\acts{\curvearrowright}
 \newcommand\revacts{\curvearrowleft}
 \newcommand\isoto{\xrightarrow{\sim}}
+\newcommand\deffunc[5]{\ensuremath{
+  \arraycolsep=1pt
+  \begin{array}{rcl}
+    #1: & #2 & \to #3 \\
+       & #4 & \mapsto #5
+  \end{array}
+}}
 
 % cycle group \cycle{1,2,3} => (1 2 3)
 \ExplSyntaxOn
