--- a/main.tex
+++ b/main.tex
@@ -319,6 +319,7 @@
 \include{fields/week1}
 \include{fields/week2}
 \include{fields/week3}
+\include{fields/week4}
 
 \printindex
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
