Fix wrong tex root specifier

--- a/extensions/week16.tex
+++ b/extensions/week16.tex
@@ -1,4 +1,4 @@
-%1 TEX root=../main.tex
+%! TEX root=../main.tex
 \section{Extensions of Groups}
 \subsection{Week 16}
 \subsubsection{Extensions of abelian groups}
