--- a/group/week7.tex
+++ b/group/week7.tex
@@ -1,4 +1,4 @@
-%1 TEX root=../main.tex
+%! TEX root=../main.tex
 \subsection{Week 7}
 \subsubsection{Composition series}
 \underline{Ques}: How to simplify a finite group $G$?
