--- a/group/week8.tex
+++ b/group/week8.tex
@@ -1,4 +1,4 @@
-%1 TEX root=../main.tex
+%! TEX root=../main.tex
 \subsection{Week 8}
 \subsubsection{Fundamental theorem of finitely generated abelian groups}
 
