--- a/linear_repr/week14.tex
+++ b/linear_repr/week14.tex
@@ -1,4 +1,4 @@
-%1 TEX root=../main.tex
+%! TEX root=../main.tex
 \section{Introduction to the linear representation theory of finite groups}
 \subsection{Week 14}
 \subsubsection{Generatlities on linear representations}
