--- a/multilinear/week11.tex
+++ b/multilinear/week11.tex
@@ -1,4 +1,4 @@
-%1 TEX root=../main.tex
+%! TEX root=../main.tex
 \section{Multilinear algebra}
 \subsection{Week 11}
 \subsubsection{Bilinear forms \& Groups preserving bilinear forms}
