--- a/multilinear/week13.tex
+++ b/multilinear/week13.tex
@@ -1,4 +1,4 @@
-%1 TEX root=../main.tex
+%! TEX root=../main.tex
 \subsection{Week 13}
 \subsubsection{Symmetric and Exterior algebra}
 \paragraph{Symmetric algebra}
