--- a/fields/week2.tex
+++ b/fields/week2.tex
@@ -1,3 +1,4 @@
+%! TEX root=../main.tex
 \subsection{Week 2}
 
 \begin{definition}
@@ -74,10 +75,10 @@
     Then we proof that $\sigma_q$ is indeed in $\Aut \Big( \quot{\Fb_{q^n}}{\Fb_q} \Big)$.
     We check that
     \[
-      \begin{align*}
+      \begin{aligned}
         \sigma_q(\alpha+\beta) &= (\alpha+\beta)^q = \alpha^q + \beta^q = \sigma_q(\alpha) + \sigma_q(\beta) \\
         \sigma_q(\alpha\beta) &= (\alpha\beta)^q = \alpha^q \beta^q = \sigma_q(\alpha) \sigma_q(\beta)
-      \end{align*}
+      \end{aligned}
     \]
     Now $\sigma_q$ is nontrivial since $\sigma_q$ send $1$ to $1$, so $\sigma_q$ is 1-1 and hence an
     isomorphism since $\Fb_q$ is finite. Also, for all $\alpha \in \Fb_q$, $\sigma_q(\alpha)
