--- a/fields/week1.tex
+++ b/fields/week1.tex
@@ -149,7 +149,7 @@
 \end{proof}
 \end{lemma}
 
-\begin{coro}
+\begin{coro} \label{coro:num-of-extensions}
   Let $K(\alpha)/K$ be an algebraic extension and $\tau: K \hookrightarrow L$.
   If $\bar\tau(m_{\alpha, K})$ has $r$ distinc roots in $L$, then there are exactly $r$ extensions of $\tau$.
 \end{coro}
