--- a/fields/week4.tex
+++ b/fields/week4.tex
@@ -1,8 +1,18 @@
 %! TEX root=../main.tex
 \subsection{Normal extension}
 
+\begin{definition}
+  $\quot{L}{K}$ is called a {\bf normal extension}\index{Extension!normal extension}
+  if $\forall \alpha \in L$, $m_{\alpha, K}$ splits over $L$.
+\end{definition}
+
+\begin{theorem}
+  $L$ is a splitting field of some polynomial $f(x)$ over $K$ if
+  and only if $L/K$ is finite and normal.
+\end{theorem}
+
 \begin{prop}
-  Let $\quot{L}{K}$ be a finite, normal extension and $L \supset M \supset K$, than the following
+  Let $\quot{L}{K}$ be a finite, normal extension and $L \supset M \supset K$, then the following
   are equivalent.
 
   \begin{enumerate}[(\alph*)]
@@ -17,7 +27,7 @@
 \end{prop}
 
 \begin{definition}
-  Let $L/K$ is called a \emph{Galois}\index{Galois extension} extension if $L/K$ is finite, normal and separable.
+  Let $L/K$ is called a \emph{Galois}\index{Extension!Galois extension} extension if $L/K$ is finite, normal and separable.
   That is, $L$ is a splitting field of some separable polynomial over $K$.
 \end{definition}
 
