Add hao dong xi

--- a/fields/week3.tex
+++ b/fields/week3.tex
@@ -170,7 +170,7 @@
   \end{proof}
 \end{prop}
 
-\begin{lemma}
+\begin{lemma} \label{lemma:element-in-alg-ext-splits}
   If $\quot{K(\alpha_1, \alpha_2, \dots, \alpha_n)}{K}$ is algebraic and $L$ is a splitting field of
   $f(x) = \prod_{i=1}^n m_{\alpha_i, K}$
   over $K$, then for all $\beta \in K(\alpha_1, \alpha_2, \dots, \alpha_n)$,
